@@ -1,6 +1,9 @@
 package org.togetherjava.tjbot.commands.mediaonly;
 
-import net.dv8tion.jda.api.entities.*;
+import net.dv8tion.jda.api.EmbedBuilder;
+import net.dv8tion.jda.api.entities.Message;
+import net.dv8tion.jda.api.entities.MessageEmbed;
+import net.dv8tion.jda.api.entities.User;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -8,12 +11,13 @@ import org.togetherjava.tjbot.config.Config;
 import org.togetherjava.tjbot.jda.JdaTester;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.mockito.Mockito.*;
 
 class MediaOnlyChannelListenerTest {
 
-    JdaTester jdaTester;
+    private JdaTester jdaTester;
     private Message message;
     private User user;
     private MediaOnlyChannelListener mediaOnlyChannelListener;
@@ -22,8 +26,7 @@ class MediaOnlyChannelListenerTest {
     void setUp() {
         jdaTester = new JdaTester();
         message = jdaTester.createMessageSpy();
-        Member memberSpy = jdaTester.createMemberSpy(1L);
-        user = memberSpy.getUser();
+        user = jdaTester.getMemberSpy().getUser();
         Config config = mock(Config.class);
         when(config.getMediaOnlyChannelPattern()).thenReturn("memes");
         mediaOnlyChannelListener = new MediaOnlyChannelListener(config);
@@ -31,9 +34,9 @@ class MediaOnlyChannelListenerTest {
 
     @Test
     void validMessagePostWithAttachment() {
-        Message.Attachment attachment = jdaTester.createAttachment(1L, null, null, "TEST",
-                "Test ContentType", null, 1, 1, 1, false);
-        jdaTester.mockMessageAttachments(message, Collections.singletonList(attachment));
+        Message.Attachment attachment = jdaTester.createAttachment("https://test.com", "test",
+                "testContentType", "unitTest");
+        jdaTester.mockMessageAttachments(message, List.of(attachment));
         MessageReceivedEvent messageReceivedEvent =
                 jdaTester.createMessageReceivedEvent(message, user);
         mediaOnlyChannelListener.onMessageReceived(messageReceivedEvent);
@@ -42,9 +45,9 @@ class MediaOnlyChannelListenerTest {
 
     @Test
     void validMessagePostWithUrlEmbedded() {
-        MessageEmbed messageEmbed = jdaTester.createMessageEmbed("https://9gag.com/gag/a61A238",
-                "Test", "Test", EmbedType.LINK, null, 1, null, null, null, null, null, null, null);
-        jdaTester.mockMessageEmbeds(message, Collections.singletonList(messageEmbed));
+        MessageEmbed messageEmbed =
+                new EmbedBuilder().setImage("https://9gag.com/gag/a61A238").build();
+        jdaTester.mockMessageEmbeds(message, List.of(messageEmbed));
         MessageReceivedEvent messageReceivedEvent =
                 jdaTester.createMessageReceivedEvent(message, user);
         mediaOnlyChannelListener.onMessageReceived(messageReceivedEvent);
